--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-watch": "^4.3.11"
   },
   "scripts": {
     "start": "gulp",
