--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^3.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-sass": "^2.1.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11"
   },
   "scripts": {
